app/assets/stylesheets/header.scss
header {
  background-color: $white;
  height: 55px;
  position: relative;

  @media (min-width: $mobile-breakpoint-width) {
    height: 172px;
  }

  .menu {
    margin: 0 0 0 -15px;
    width: calc(100% + 30px);

    @media (min-width: $mobile-breakpoint-width) {
      display: none;
    }

    .fa {
      color: $red;
      margin: 0 10px 0 0;
    }

    input {
      display: none;
    }

    label {
      cursor: pointer;
      margin: 0;
    }

    > label {
      color: $anthracite;
      font-family: 'Montserrat', sans-serif;
      font-size: 18px;
      font-stretch: normal;
      font-style: normal;
      font-weight: 600;
      left: 20px;
      letter-spacing: 0;
      line-height: 22px;
      position: absolute;
      text-align: left;
      top: 17px;
    }

    ul {
      background-color: $mobile-menu-gray;
      max-height: 0;
      overflow: hidden;
      padding: 0;
      transition: max-height .5s;

      li {
        list-style: none;
      }

      .nav-item {
        color: $black;
        font-family: 'Montserrat', sans-serif;
        font-size: 18px;
        font-stretch: normal;
        font-style: normal;
        font-weight: 600;
        letter-spacing: 0;
        line-height: 1.44;
        text-align: left;
      }

      .meta-nav-item {
        color: $black;
        font-family: 'Montserrat', sans-serif;
        font-size: 14px;
        font-stretch: normal;
        font-style: normal;
        font-weight: 600;
        letter-spacing: 0;
        line-height: 1.57;
        text-align: left;

        &.uppercase {
          text-transform: uppercase;
        }
      }

      a {
        left: -5px;
        padding: 0 5px;
        position: relative;

        &.active {
          background-color: $yellow;
        }
      }

      .nav-child-item {
        a {
          padding: 0 5px 0 30px;
        }
      }
    }

    > ul {
      padding: 0 0 0 20px;
      position: absolute;
      top: 55px;
      width: 100%;
      z-index: 9;

      > .nav-item:first-of-type {
        margin-top: 16px;
      }

      > .meta-nav-item:last-of-type {
        margin-bottom: 33px;
      }
    }

    [type='checkbox']:checked ~ label ~ ul {
      max-height: 100vh;
    }
  }

  .logo-die-offene-gesellschaft {
    display: none;
    height: 86px;
    left: 37px;
    object-fit: contain;
    position: absolute;
    top: 45px;
    width: 198px;

    @media (min-width: $mobile-breakpoint-width) {
      display: inline-block;
    }
  }

  .meta-nav {
    display: none;
    font-family: 'Montserrat', sans-serif;
    font-size: 12px;
    font-stretch: normal;
    font-style: normal;
    font-weight: normal;
    letter-spacing: 0;
    line-height: 14px;
    position: absolute;
    right: 42px;
    top: 20.2px;

    @media (min-width: $mobile-breakpoint-width) {
      display: block;
    }

    a {
      color: $meta-nav-gray;
      margin: 0 5.5px;
      text-transform: uppercase;

      &.logout {
        color: $black;
        font-weight: 600;
        margin: 0 0 0 5.5px;
      }
    }
  }

  nav {
    font-family: 'Montserrat', sans-serif;
    font-size: 18px;
    font-stretch: normal;
    font-style: normal;
    font-weight: 600;
    letter-spacing: 0;
    line-height: 22px;
    position: absolute;
    right: 20px;
    top: 17px;

    @media (min-width: $mobile-breakpoint-width) {
      right: 36px;
      top: 119px;
    }

    a {
      color: $black;
      display: none;
      margin: 0 1px;

      @media (min-width: $mobile-breakpoint-width) {
        display: inline;
      }

      &.participate {
        color: $red;
        display: inline;
        margin: 0 0 0 41px;
      }
    }
  }
}

